--- a/css/style.less
+++ b/css/style.less
@@ -158,18 +158,19 @@ aside{
   }
   width: 26%;
   background-color:#f8f9fb;
-  position: relative;
-  input{
-      margin: 30px 35px;
+  .search_bar{
+    position: relative;
+    margin: 70px 50px;
+  }
+  input{     
       border: 1px solid @blue;
       height: 50px;
-      width: 300px;
-
+      width: 270px;     
   }
   .fa-magnifying-glass{
       position: absolute;
-      top: 50px;
-      right: 60px;
+      top: 40%;
+      right: 12%;
   }
   input::placeholder{
     font-family: @font_poppins;
