--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,6 @@ main .page_button .active_btn {
 aside {
   width: 26%;
   background-color: #f8f9fb;
-  position: relative;
 }
 aside .h4 {
   font-family: 'Lora', serif;
@@ -319,16 +318,19 @@ aside .h4 {
   color: #4c4c4d;
   padding-bottom: 25px;
 }
+aside .search_bar {
+  position: relative;
+  margin: 70px 50px;
+}
 aside input {
-  margin: 30px 35px;
   border: 1px solid #1eafed;
   height: 50px;
-  width: 300px;
+  width: 270px;
 }
 aside .fa-magnifying-glass {
   position: absolute;
-  top: 50px;
-  right: 60px;
+  top: 40%;
+  right: 12%;
 }
 aside input::placeholder {
   font-family: 'Poppins', sans-serif;
