--- a/css/style.css
+++ b/css/style.css
@@ -261,9 +261,20 @@ main {
   margin: 0 0 0 25%;
   padding-top: 50px;
   border-left: 1px solid #e9e9e9;
+  opacity: 0;
+  animation: show 3s forwards;
+}
+@keyframes show {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 main .post_block {
   padding-left: 50px;
+  margin-bottom: 50px;
 }
 main .post_block h2 {
   font-family: 'Lora', serif;
@@ -307,9 +318,31 @@ main .page_button .active_btn {
   background-color: #1eafed;
   color: white;
 }
+.block_anim {
+  opacity: 0;
+  animation: show 3s forwards;
+}
+@keyframes show {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 aside {
+  opacity: 0;
+  animation: show 3s forwards;
   width: 26%;
   background-color: #f8f9fb;
+}
+@keyframes show {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 aside .h4 {
   font-family: 'Lora', serif;
