--- a/css/style.less
+++ b/css/style.less
@@ -97,10 +97,10 @@ main{
   margin: 0 0 0 25%;
   padding-top: 50px;
   border-left: 1px solid #e9e9e9;
-
+  .block_anim();
   .post_block{
     padding-left: 50px;
-
+    margin-bottom: 50px;
     h2{
       font-family: @font_lora;
       font-size: 30px;
@@ -149,7 +149,18 @@ main{
   }
 }
 
+
+
+.block_anim{
+  opacity:0;
+  animation: show 3s forwards;
+  @keyframes show {
+    0% {opacity: 0;}
+    100%{ opacity: 1; }
+  }  
+}
 aside{
+  .block_anim();
   .h4{
       font-family: @font_lora;
       font-size: 1.4rem;
