--- a/css/style.less
+++ b/css/style.less
@@ -96,34 +96,71 @@ main{
   width: 50%;
   margin: 0 0 0 25%;
   padding-top: 50px;
-  border-left: 1px solid #e9e9e9;
-  .block_anim();
+  border-left: 1px solid @grey;
+  
+  
   .post_block{
     padding-left: 50px;
     margin-bottom: 50px;
-    h2{
-      font-family: @font_lora;
-      font-size: 30px;
-      line-height: 45px;
-      font-weight: @f1;
-      padding-right: 25px;
-      padding-bottom: 20px;
+    display:flex;
+    .block_anim();
+    .text_block{
+      width: 70%; 
+    
+      h3{
+        a{
+          text-decoration: none;
+          color: @black;
+          font-family: @font_lora;
+        }
+        
+        font-size: 30px;
+        line-height: 45px;
+        font-weight: @f1;
+        padding-right: 25px;
+        padding-bottom: 20px;
+      }
+      .p{
+        font-family: @font_poppins;
+        color: @grey;
+        margin: 0 10px;
+        font-size: 0.9rem;
+      }
+      .post_block_text{
+        display:flex;
+        font-family: @font_poppins;
+      
+        p{
+          .p()
+        }
+        a{
+          text-decoration: none;
+          color: @black;
+          line-height: 25px;
+        }
+      }
+      p{
+        .p();
+        color: @darkgrey;
+        font-weight: 300;
+        color: @darkgrey;
+        margin: 15px 0;
+        line-height: 25px;
+      }
+      & a{
+        text-decoration: none;
+        color: @blue;
+        font-family: @font_poppins;
+      }
     }
-    .post_block_text{
-      display:flex;
-
-    }
+    
     img{
       width: 150px;
       height: 150px;
       border-radius: 50%;
       object-fit: cover;
-      float: left;
+      //float: left;
       margin-right: 30px;
-    }
-    p{
-      font-family: @font_poppins;
-      color: @grey;
     }
     
   }
