--- a/css/style.less
+++ b/css/style.less
@@ -6,6 +6,7 @@ nav{
   width: 20%;
   margin: auto 0;
   position:fixed;
+  border-left: 1px solid @grey;
   ul{
     padding-left: 30px;
     padding-top: 100px;
@@ -19,7 +20,6 @@ nav{
       line-height: 40px; 
       transition: all 0.2s ease-out;
         &:hover{
-          color: @black;
           border-bottom: 3px solid @blue;    
         }
       }   
