--- a/css/style.less
+++ b/css/style.less
@@ -3,10 +3,9 @@ body{
   display: flex;
 }
 nav{
-  width: 20%;
+  width: 25%;
   margin: auto 0;
   position:fixed;
-  border-left: 1px solid @grey;
   ul{
     padding-left: 30px;
     padding-top: 100px;
@@ -50,7 +49,7 @@ nav{
     & input{
       border: 1px solid @blue;
       height: 50px;
-      width: 340px;
+      width: 90%;
       
     }
     .fa-paper-plane{
@@ -81,13 +80,13 @@ nav{
 main{
   width: 49%;
   margin: 0 0 0 25%;
-  padding-top: 50px;
+  
   border-left: 1px solid @grey;
   
   
   .post_block{
     padding-left: 50px;
-    margin-bottom: 50px;
+    margin: 50px 0;
     display:flex;
     .block_anim();
     .text_block{
@@ -145,7 +144,6 @@ main{
       height: 150px;
       border-radius: 50%;
       object-fit: cover;
-      //float: left;
       margin-right: 30px;
     }
     
@@ -170,18 +168,20 @@ main{
       color: white;
     }
   }
+
 }
 
 
 
-.block_anim{
-  opacity:0;
-  animation: show 3s forwards;
-  @keyframes show {
-    0% {opacity: 0;}
-    100%{ opacity: 1; }
-  }  
-}
+// .block_anim{
+//   transform: translateY(100%);
+//   animation: show 1s forwards;
+//   @keyframes show {
+//     0% {transform: translateY(100%);}
+//     100% {transform: translateY(0);}
+//   }  
+// }
+
 aside{
   .block_anim();
   .h4{
@@ -298,7 +298,7 @@ aside{
         filter: brightness(40%);
         background-position: center;
         background-size: 500px;
-        width: 26%;
+        width: 100%;
         height: 320px;  
         position: absolute;      
       }
