--- a/css/var.less
+++ b/css/var.less
@@ -13,3 +13,12 @@
 @blue: #1EAFED;
 @grey:#cdcdcd;
 @black: #000;
+
+.block_anim{
+  transform: translateY(100%);
+  animation: show 1s forwards;
+  @keyframes show {
+    0% {transform: translateY(100%);}
+    100% {transform: translateY(0);}
+  }  
+}
