--- a/css/style.less
+++ b/css/style.less
@@ -79,11 +79,8 @@ nav{
 
 main{
   width: 49%;
-  margin: 0 0 0 25%;
-  
-  border-left: 1px solid @grey;
-  
-  
+  margin: 0 0 0 25%;  
+  border-left: 1px solid @grey;  
   .post_block{
     padding-left: 50px;
     margin: 50px 0;
@@ -99,7 +96,7 @@ main{
           font-family: @font_lora;
         }
         
-        font-size: 30px;
+        font-size: 1.8rem;
         line-height: 45px;
         font-weight: @f1;
         padding-right: 25px;
@@ -169,18 +166,42 @@ main{
     }
   }
 
+
+  .travel_post{
+    img{
+      width: 660px;
+      margin: 6%;
+      height: 400px;
+      object-fit: cover;
+    }
+    h2{
+      @font-family: @font_lora;
+      font-size: 2rem;
+      margin: 0 6% 3%;
+    }
+    p{
+      font-family: @font_poppins;
+      font-size: 0.9rem;
+      margin: 0 6% 6%;
+      line-height: 25px;
+      color: @darkgrey;
+    }
+    .post_author{
+      display:flex;
+      img{
+        width: 60px;
+        height: auto;
+        border-radius: 50%;
+        margin:0 6%;
+      }
+
+      p{
+
+      }
+    }
+  }
 }
 
-
-
-// .block_anim{
-//   transform: translateY(100%);
-//   animation: show 1s forwards;
-//   @keyframes show {
-//     0% {transform: translateY(100%);}
-//     100% {transform: translateY(0);}
-//   }  
-// }
 
 aside{
   .block_anim();
