--- a/css/style.css
+++ b/css/style.css
@@ -266,12 +266,29 @@ nav .sub_block p {
 nav .sub_block p span {
   color: #000000;
 }
+.bar_btn {
+  display: none;
+  position: fixed;
+  top: 5%;
+  left: 2%;
+  font-size: 25px;
+}
+.close_btn {
+  position: fixed;
+  top: 5%;
+  left: 2%;
+  font-size: 25px;
+  display: none;
+}
 main {
-  width: 49%;
   margin: 0 0 0 25%;
   border-left: 1px solid #cdcdcd;
+  width: 49%;
 }
-main .post_block {
+.fashion {
+  width: 150%;
+}
+.post_block {
   padding-left: 50px;
   margin: 50px 0;
   display: flex;
@@ -286,43 +303,43 @@ main .post_block {
     transform: translateY(0);
   }
 }
-main .post_block .text_block {
+.post_block .text_block {
   width: 70%;
 }
-main .post_block .text_block h3 {
+.post_block .text_block h3 {
   font-size: 1.8rem;
   line-height: 45px;
   font-weight: 400;
   padding-right: 25px;
   padding-bottom: 20px;
 }
-main .post_block .text_block h3 a {
+.post_block .text_block h3 a {
   text-decoration: none;
   color: #000000;
   font-family: 'Lora', serif;
 }
-main .post_block .text_block .p {
+.post_block .text_block .p {
   font-family: 'Poppins', sans-serif;
   color: #cdcdcd;
   margin: 0 10px;
   font-size: 0.9rem;
 }
-main .post_block .text_block .post_block_text {
+.post_block .text_block .post_block_text {
   display: flex;
   font-family: 'Poppins', sans-serif;
 }
-main .post_block .text_block .post_block_text p {
+.post_block .text_block .post_block_text p {
   font-family: 'Poppins', sans-serif;
   color: #cdcdcd;
   margin: 0 10px;
   font-size: 0.9rem;
 }
-main .post_block .text_block .post_block_text a {
+.post_block .text_block .post_block_text a {
   text-decoration: none;
   color: #000000;
   line-height: 25px;
 }
-main .post_block .text_block p {
+.post_block .text_block p {
   font-family: 'Poppins', sans-serif;
   color: #cdcdcd;
   margin: 0 10px;
@@ -332,23 +349,23 @@ main .post_block .text_block p {
   margin: 15px 0;
   line-height: 25px;
 }
-main .post_block .text_block a {
+.post_block .text_block a {
   text-decoration: none;
   color: #1eafed;
   font-family: 'Poppins', sans-serif;
 }
-main .post_block img {
+.post_block img {
   width: 150px;
   height: 150px;
   border-radius: 50%;
   object-fit: cover;
   margin-right: 30px;
 }
-main .page_button {
+.page_button {
   margin: 50px 10px;
   display: flex;
 }
-main .page_button a {
+.page_button a {
   display: block;
   text-decoration: none;
   border-radius: 50%;
@@ -359,35 +376,198 @@ main .page_button a {
   color: #1eafed;
   text-align: center;
 }
-main .page_button .active_btn {
+.page_button .active_btn {
   background-color: #1eafed;
-  color: white;
+  color: #ffffff;
 }
-main .travel_post img {
-  width: 660px;
-  margin: 6%;
+.travel_post {
+  transform: translateY(100%);
+  animation: show 1s forwards;
+  margin: 60px 40px 150px;
+}
+@keyframes show {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+.travel_post .post_text img {
   height: 400px;
+  width: 660px;
   object-fit: cover;
 }
-main .travel_post h2 {
+.travel_post .post_text h2 {
+  font-family: 'Lora', serif;
   font-size: 2rem;
-  margin: 0 6% 3%;
+  margin: 30px 0;
 }
-main .travel_post p {
+.travel_post .post_text p {
   font-family: 'Poppins', sans-serif;
   font-size: 0.9rem;
-  margin: 0 6% 6%;
-  line-height: 25px;
   color: #4c4c4d;
+  overflow: hidden;
+  line-height: 30px;
 }
-main .travel_post .post_author {
+.travel_post .post_author {
+  margin-top: 20px;
   display: flex;
 }
-main .travel_post .post_author img {
+.travel_post .post_author img {
+  height: 60px;
   width: 60px;
-  height: auto;
   border-radius: 50%;
-  margin: 0 6%;
+}
+.travel_post .post_author .post_author_text {
+  display: flex;
+  flex-direction: column;
+  margin: 10px 15px;
+}
+.travel_post .post_author .post_author_text span {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
+  color: #cdcdcd;
+}
+.travel_post .post_author .post_author_text a {
+  text-decoration: underline;
+  font-family: 'Lora', serif;
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: #000000;
+}
+.travel_post .post_author .post_author_text p {
+  font-family: 'Lora', serif;
+  font-size: 1rem;
+  line-height: 30px;
+}
+.travel_post .post_btn {
+  display: flex;
+  position: absolute;
+  width: 45%;
+}
+.travel_post .post_btn a {
+  text-decoration: none;
+  display: block;
+  color: #ffffff;
+  background-color: #1eafed;
+  width: 200px;
+  height: 60px;
+  border-radius: 50px;
+  text-align: center;
+  line-height: 60px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
+  margin: 20px 0;
+}
+.travel_post .post_btn a:hover {
+  color: #1eafed;
+  background-color: #ffffff;
+  border: 1px solid #1eafed;
+}
+.travel_post .post_btn .post_likes {
+  position: absolute;
+  top: 50%;
+  right: -120%;
+}
+.travel_post .post_btn .post_likes i {
+  color: #cdcdcd;
+  margin: 0 5px;
+}
+.travel_post .post_btn .post_likes span {
+  color: #cdcdcd;
+}
+.about {
+  display: flex;
+  width: 150%;
+}
+.about img {
+  width: 550px;
+  margin-top: -5%;
+}
+.about .about_text {
+  font-family: 'Poppins', sans-serif;
+  margin: 15% 50px 0;
+  transform: translateY(100%);
+  animation: show 1s forwards;
+}
+@keyframes show {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+.about .about_text h2 {
+  font-size: 50px;
+  font-weight: 600;
+}
+.about .about_text h2 span {
+  font-weight: 700;
+  color: #1eafed;
+}
+.about .about_text p {
+  padding-top: 20px;
+  line-height: 30px;
+  color: #4c4c4d;
+}
+.contact {
+  width: 150%;
+}
+.contact h2 {
+  font-family: 'Lora', serif;
+  font-size: 1.7rem;
+  margin: 50px 30px 0;
+}
+.contact .contact_address {
+  display: flex;
+}
+.contact .contact_block {
+  background-color: #f8f9fb;
+  margin: 20px;
+  width: 240px;
+  height: 150px;
+  font-family: 'Poppins', sans-serif;
+  color: #4c4c4d;
+}
+.contact .contact_block p {
+  margin: 50px 20px;
+}
+.contact a {
+  text-decoration: none;
+  display: block;
+  color: #ffffff;
+  background-color: #1eafed;
+  width: 200px;
+  height: 60px;
+  border-radius: 50px;
+  text-align: center;
+  line-height: 60px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
+  margin: 20px 0;
+}
+.contact a:hover {
+  color: #1eafed;
+  background-color: #ffffff;
+  border: 1px solid #1eafed;
+}
+.contact form {
+  background-color: #f8f9fb;
+  height: 560px;
+  width: 520px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+}
+.contact form input {
+  height: 50px;
+  width: 420px;
+  margin: 20px;
+}
+.contact form a {
+  margin-left: 20px;
 }
 aside {
   transform: translateY(100%);
@@ -522,7 +702,7 @@ aside .newsletter .filter {
   background: url(../images/bg_1.jpg) 50% 25% no-repeat;
   filter: brightness(40%);
   background-position: center;
-  background-size: 500px;
+  background-size: 150%;
   width: 100%;
   height: 320px;
   position: absolute;
@@ -536,7 +716,7 @@ aside .newsletter .news_text h4 {
   font-style: italic;
   color: #4c4c4d;
   padding-bottom: 25px;
-  color: white;
+  color: #ffffff;
   padding-top: 20%;
   padding-left: 40px;
   padding-right: 10%;
@@ -577,6 +757,9 @@ aside .newsletter .news_text button {
   font-size: 1rem;
   background-color: #fff;
 }
+aside .archives_block h4 {
+  margin-top: 70px;
+}
 aside .paragraph_block p {
   font-family: 'Poppins', sans-serif;
   line-height: 25px;
@@ -591,4 +774,71 @@ aside .paragraph_block h4 {
   color: #4c4c4d;
   padding-bottom: 25px;
   margin: 25px 35px 0;
+}
+@media screen and (max-width: 1200px) {
+  body {
+    flex-direction: column;
+  }
+  main {
+    width: 75%;
+  }
+  aside {
+    width: 75%;
+    margin: 0 0 0 25%;
+  }
+  aside .aside_articles {
+    padding-top: 70px;
+  }
+  aside .tag_block {
+    margin-top: 70px;
+  }
+  aside .newsletter .filter {
+    height: 380px;
+  }
+  aside .newsletter .news_text h4 {
+    padding-top: 11%;
+  }
+  .bar_btn {
+    display: block;
+  }
+  .menu_block {
+    display: none;
+  }
+  main {
+    margin: 0 0 0 5%;
+    border-left: none;
+  }
+}
+@media screen and (max-width: 900px) {
+  aside {
+    width: 80%;
+    margin: 0 10% 0;
+  }
+  .fashion {
+    width: 100%;
+  }
+  .contact_address {
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 600px) {
+  .post_block {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+  }
+  img {
+    margin: 0;
+  }
+}
+.show {
+  display: block;
+}
+.no_show {
+  display: none;
+}
+.show_margin {
+  margin-left: 30%;
+  border-left: 1px solid #cdcdcd;
 }
